--- a/RozWorld-Net/RozWorld-Net.csproj
+++ b/RozWorld-Net/RozWorld-Net.csproj
@@ -49,8 +49,10 @@
     <Compile Include="Packets\ServerInfoRequestPacket.cs" />
     <Compile Include="Packets\ServerInfoResponsePacket.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Server\Event\InfoRequestReceivedHandler.cs" />
     <Compile Include="Server\RwUdpServer.cs" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
