--- a/RozWorld-Net/RozWorld-Net.csproj
+++ b/RozWorld-Net/RozWorld-Net.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Packets\ServerInfoRequestPacket.cs" />
     <Compile Include="Packets\ServerInfoResponsePacket.cs" />
     <Compile Include="Packets\SignUpRequestPacket.cs" />
+    <Compile Include="Packets\SignUpResponsePacket.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Server\Event\InfoRequestReceivedHandler.cs" />
     <Compile Include="Server\RwUdpServer.cs" />
