--- a/RozWorld-Net/RozWorld-Net.csproj
+++ b/RozWorld-Net/RozWorld-Net.csproj
@@ -45,10 +45,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Client\Event\InfoResponseReceivedHandler.cs" />
+    <Compile Include="Client\ClientState.cs" />
+    <Compile Include="Client\Event\InfoResponseEventHandler.cs" />
+    <Compile Include="Client\Event\TimeoutEventHandler.cs" />
     <Compile Include="Client\RwUdpClient.cs" />
     <Compile Include="Packets\IPacket.cs" />
     <Compile Include="Packets\LogInRequestPacket.cs" />
+    <Compile Include="Packets\PacketType.cs" />
     <Compile Include="Packets\SenderIs.cs" />
     <Compile Include="Packets\ServerInfoRequestPacket.cs" />
     <Compile Include="Packets\ServerInfoResponsePacket.cs" />
