--- a/RozWorld-Net/RozWorld-Net.csproj
+++ b/RozWorld-Net/RozWorld-Net.csproj
@@ -46,7 +46,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Client\ClientState.cs" />
-    <Compile Include="Client\Event\PacketEventHandler.cs" />
+    <Compile Include="Packets\Event\PacketEventHandler.cs" />
     <Compile Include="Client\PacketWatcher.cs" />
     <Compile Include="Client\RwUdpClient.cs" />
     <Compile Include="Packets\ErrorMessage.cs" />
@@ -60,7 +60,6 @@
     <Compile Include="Packets\SignUpRequestPacket.cs" />
     <Compile Include="Packets\SignUpResponsePacket.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Server\Event\PacketReceivedEventHandler.cs" />
     <Compile Include="Server\RwUdpServer.cs" />
   </ItemGroup>
   <ItemGroup />
