ID > Id consistency - adding LogInResponsePacket

--- a/RozWorld-Net/RozWorld-Net.csproj
+++ b/RozWorld-Net/RozWorld-Net.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Packets\ErrorMessage.cs" />
     <Compile Include="Packets\IPacket.cs" />
     <Compile Include="Packets\LogInRequestPacket.cs" />
+    <Compile Include="Packets\LogInResponsePacket.cs" />
     <Compile Include="Packets\PacketTimeout.cs" />
     <Compile Include="Packets\PacketType.cs" />
     <Compile Include="Packets\SenderIs.cs" />
