--- a/RozWorld-Net/RozWorld-Net.csproj
+++ b/RozWorld-Net/RozWorld-Net.csproj
@@ -46,6 +46,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Client\ClientState.cs" />
+    <Compile Include="Packets\ClientDisconnectPacket.cs" />
     <Compile Include="Packets\Event\PacketEventHandler.cs" />
     <Compile Include="Client\PacketWatcher.cs" />
     <Compile Include="Client\RwUdpClient.cs" />
