--- a/RozWorld-Net/RozWorld-Net.csproj
+++ b/RozWorld-Net/RozWorld-Net.csproj
@@ -57,6 +57,7 @@
     <Compile Include="Packets\PacketTimeout.cs" />
     <Compile Include="Packets\PacketType.cs" />
     <Compile Include="Packets\SenderIs.cs" />
+    <Compile Include="Packets\ServerDisconnectPacket.cs" />
     <Compile Include="Packets\ServerInfoRequestPacket.cs" />
     <Compile Include="Packets\ServerInfoResponsePacket.cs" />
     <Compile Include="Packets\SignUpRequestPacket.cs" />
