--- a/RozWorld-Net/RozWorld-Net.csproj
+++ b/RozWorld-Net/RozWorld-Net.csproj
@@ -47,7 +47,7 @@
   <ItemGroup>
     <Compile Include="Client\ClientState.cs" />
     <Compile Include="Packets\ClientDisconnectPacket.cs" />
-    <Compile Include="Packets\Event\PacketEventHandler.cs" />
+    <Compile Include="Packets\Event\PacketEvent.cs" />
     <Compile Include="Client\PacketWatcher.cs" />
     <Compile Include="Client\RwUdpClient.cs" />
     <Compile Include="Packets\ErrorMessage.cs" />
