--- a/RozWorld-Net/RozWorld-Net.csproj
+++ b/RozWorld-Net/RozWorld-Net.csproj
@@ -33,8 +33,8 @@
     <DocumentationFile>bin\Release\Oddmatics.RozWorld.Net.XML</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Oddmatics-IO">
-      <HintPath>..\..\Oddmatics-IO\Oddmatics-IO\bin\Release\Oddmatics-IO.dll</HintPath>
+    <Reference Include="Oddmatics.Util.IO">
+      <HintPath>..\..\Oddmatics-IO\Oddmatics-IO\bin\Release\Oddmatics.Util.IO.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
