--- a/RozWorld-Net/RozWorld-Net.csproj
+++ b/RozWorld-Net/RozWorld-Net.csproj
@@ -63,6 +63,7 @@
     <Compile Include="Packets\SignUpRequestPacket.cs" />
     <Compile Include="Packets\SignUpResponsePacket.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Server\ConnectedClient.cs" />
     <Compile Include="Server\RwUdpServer.cs" />
   </ItemGroup>
   <ItemGroup />
