Work on connected client- need to update client too

--- a/RozWorld-Net/RozWorld-Net.csproj
+++ b/RozWorld-Net/RozWorld-Net.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Packets\LogInResponsePacket.cs" />
     <Compile Include="Packets\PacketTimeout.cs" />
     <Compile Include="Packets\PacketType.cs" />
+    <Compile Include="Packets\PingPacket.cs" />
     <Compile Include="Packets\SenderIs.cs" />
     <Compile Include="Packets\ServerDisconnectPacket.cs" />
     <Compile Include="Packets\ServerInfoRequestPacket.cs" />
@@ -64,6 +65,7 @@
     <Compile Include="Packets\SignUpResponsePacket.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Server\ConnectedClient.cs" />
+    <Compile Include="Server\Event\ClientDropEventArgs.cs" />
     <Compile Include="Server\RwUdpServer.cs" />
   </ItemGroup>
   <ItemGroup />
