--- a/RozWorld-Net/RozWorld-Net.csproj
+++ b/RozWorld-Net/RozWorld-Net.csproj
@@ -47,6 +47,7 @@
   <ItemGroup>
     <Compile Include="Client\ClientState.cs" />
     <Compile Include="Packets\AcknowledgePacket.cs" />
+    <Compile Include="Packets\ChatActionPacket.cs" />
     <Compile Include="Packets\ClientDisconnectPacket.cs" />
     <Compile Include="Packets\DisconnectActionPacket.cs" />
     <Compile Include="Packets\DisconnectReason.cs" />
@@ -56,6 +57,7 @@
     <Compile Include="Packets\ErrorMessage.cs" />
     <Compile Include="Packets\IAcknowledgeable.cs" />
     <Compile Include="Packets\IPacket.cs" />
+    <Compile Include="Packets\IPlayerPacket.cs" />
     <Compile Include="Packets\LogInRequestPacket.cs" />
     <Compile Include="Packets\LogInResponsePacket.cs" />
     <Compile Include="Packets\PacketTimeout.cs" />
