--- a/RozWorld-Net/RozWorld-Net.csproj
+++ b/RozWorld-Net/RozWorld-Net.csproj
@@ -70,6 +70,7 @@
     <Compile Include="Server\ConnectedClient.cs" />
     <Compile Include="Server\Event\ClientDropEventArgs.cs" />
     <Compile Include="Server\RwUdpServer.cs" />
+    <Compile Include="Server\UserClient.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
