--- a/RozWorld-Net/RozWorld-Net.csproj
+++ b/RozWorld-Net/RozWorld-Net.csproj
@@ -77,6 +77,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Server\ConnectedClient.cs" />
     <Compile Include="Server\Event\ClientDropEventArgs.cs" />
+    <Compile Include="Server\Event\PacketCheckEvent.cs" />
     <Compile Include="Server\RwUdpServer.cs" />
     <Compile Include="Server\SessionInfo.cs" />
     <Compile Include="Server\UserClient.cs" />
